Prevent title behind breadcrumb for anchor with javascript
Related to: AAC-960 and AAC-968

--- a/Resources/Private/Scss/_breadcrumb.scss
+++ b/Resources/Private/Scss/_breadcrumb.scss
@@ -21,7 +21,7 @@
     flex-shrink: 0;
     justify-content: center;
     padding: 0;
-    z-index: 400;
+    z-index: 20;
 
     a {
         color: $shadeDark;
