--- a/Resources/Private/Scss/_navigation.scss
+++ b/Resources/Private/Scss/_navigation.scss
@@ -413,7 +413,7 @@
     width: 100%;
     justify-content: center;
     align-items: flex-start;
-    z-index: 500;
+    z-index: 10;
 }
 
 .navigation_default-submenuContainer-inner {
